--- a/frontend/static/templates/volumes.page.html
+++ b/frontend/static/templates/volumes.page.html
@@ -27,6 +27,9 @@
                             Volume Name
                           </th>
                           <th>
+                            K8s Namespace
+                          </th>
+                          <th>
                             K8s PVC Name
                           </th>
                           <th>
@@ -54,6 +57,9 @@
                           </td>
                           <td>
                             {{ $volume.VolumeName }}
+                          </td>
+                          <td>
+                            {{ $volume.VolumeK8sNamespace }}
                           </td>
                           <td>
                             {{ $volume.VolumeK8sPVCName }}
