--- a/frontend/static/templates/node-specific.page.html
+++ b/frontend/static/templates/node-specific.page.html
@@ -197,7 +197,7 @@
       } else if (element.title == "STATUS_STORAGE_DOWN") { 
 
         let btn = document.createElement("button");
-        btn.innerHTML = "Node Down";
+        btn.innerHTML = "Node Storage Down";
         btn.type = "button";
         btn.name = "formBtn";
         btn.classList = "btn btn-inverse-danger btn-fw";
