--- a/frontend/static/templates/nodes.page.html
+++ b/frontend/static/templates/nodes.page.html
@@ -112,7 +112,7 @@
       } else if (elements.item(i).title == "STATUS_STORAGE_DOWN") { 
 
         let btn = document.createElement("button");
-        btn.innerHTML = "Node Down";
+        btn.innerHTML = "Node Storage Down";
         btn.type = "button";
         btn.name = "formBtn";
         btn.classList = "btn btn-inverse-danger btn-fw";
