--- a/frontend/static/templates/snapshots.page.html
+++ b/frontend/static/templates/snapshots.page.html
@@ -1,5 +1,11 @@
 {{template "base" .}}
 
+  {{ define "css"}}
+
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+
+  {{ end }}
+
   {{define "content"}}
 
       {{ $AllVolumesInfo := .JsonAllVolumesInfo.AllVolumesInfo }}
@@ -10,7 +16,7 @@
             <div class="col-lg-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Volumes</h4>
+                  <h4 class="card-title">Volumes and Snapshots</h4>
                   <div class="table-responsive">
                     <table class="table table-striped" id="volumes" style="width:100%">
                       <thead>
