improving snapshots view Changes to be committed: 	modified:   frontend/cmd/web/repository.go 	modified:   frontend/cmd/web/routes.go 	modified:   frontend/static/templates/base-template.layout.html 	renamed:    frontend/static/templates/storage-pools.page.html -> frontend/static/templates/cloud-credentials.page.html 	modified:   frontend/static/templates/secondary-template.layout.html 	modified:   frontend/static/templates/snapshots.page.html

--- a/frontend/static/templates/base-template.layout.html
+++ b/frontend/static/templates/base-template.layout.html
@@ -231,9 +231,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="storage-pools">
-              <i class="ti-harddrives menu-icon"></i>
-              <span class="menu-title">Storage Pools</span>
+            <a class="nav-link" href="cloud-credentials">
+              <i class="ti-cloud-up menu-icon"></i>
+              <span class="menu-title">Cloud Credentials</span>
             </a>
           </li>
           <li class="nav-item">
