--- a/frontend/static/templates/cloud-credentials.page.html
+++ b/frontend/static/templates/cloud-credentials.page.html
@@ -8,7 +8,7 @@
             <div class="col-lg-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Striped Table</h4>
+                  <h4 class="card-title">Cloud Credentials</h4>
                   <p class="card-description">
                     Add class <code>.table-striped</code>
                   </p>
