--- a/frontend/static/templates/snapshots.page.html
+++ b/frontend/static/templates/snapshots.page.html
@@ -28,25 +28,13 @@
                             Volume Name
                           </th>
                           <th>
+                            Cloud Snapshots
+                          </th>
+                          <th>
                             K8s Namespace
                           </th>
                           <th>
                             K8s PVC Name
-                          </th>
-                          <th>
-                            Replicas
-                          </th>
-                          <th>
-                            Status
-                          </th>
-                          <th>
-                            Attached On
-                          </th>
-                          <th>
-                            Encrypted
-                          </th> 
-                          <th>
-                            Volume Usage
                           </th>
                         </tr>
                       </thead>
@@ -60,26 +48,44 @@
                             {{ $volume.VolumeName }}
                           </td>
                           <td>
+                            <div class="table-responsive">
+                              <table class="table table-striped" id="snapshots" style="width:100%">
+                                <thead>
+                                  <tr> 
+                                    <th> Snap ID </th> 
+                                    <th> Snap Status </th> 
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td> <a href="volume/{{ $volume.VolumeID }}"> {{ $volume.VolumeID }}</a> </td>
+                                    <td> Snapshot 01 </td> 
+                                  </tr>
+                                  <tr>
+                                    <td> <a href="volume/{{ $volume.VolumeID }}"> {{ $volume.VolumeID }}</a> </td>
+                                    <td> Snapshot 02 </td> 
+                                  </tr>
+                                  <tr>
+                                    <td> <a href="volume/{{ $volume.VolumeID }}"> {{ $volume.VolumeID }}</a> </td>
+                                    <td> Snapshot 03 </td> 
+                                  </tr>
+                                  <tr>
+                                    <td> <a href="volume/{{ $volume.VolumeID }}"> {{ $volume.VolumeID }}</a> </td>
+                                    <td> Snapshot 04 </td> 
+                                  </tr>
+                                  <tr>
+                                    <td> <a href="volume/{{ $volume.VolumeID }}"> {{ $volume.VolumeID }}</a> </td>
+                                    <td> Snapshot 05 </td> 
+                                  </tr>
+                                </tbody>
+                              </table> 
+                            </div>
+                          </td>
+                          <td>
                             {{ $volume.VolumeK8sNamespace }}
                           </td>
                           <td>
                             {{ $volume.VolumeK8sPVCName }}
-                          <td>
-                            {{ $volume.VolumeReplicas }}
-                          </td>
-                          <td class="check-volume" title="{{$volume.VolumeStatus}}">
-                              <div id="check-volume-{{$index}}"> </div>
-                          </td>
-                          <td>
-                            {{ $volume.VolumeAttachedOn }}
-                          </td>
-                          <td>
-                            {{ $volume.VolumeEncrypted }}
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: {{ $volume.VolumeUsedPercent }}%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
                           </td>
                         </tr>
                         {{ end }}
@@ -166,7 +172,17 @@
       $(document).ready(function() {
         $('#volumes').DataTable( {
             responsive: true,
-            "pageLength": 10,
+            "pageLength": 5,
+        } );
+    } );
+  </script>
+
+  <script>
+  
+      $(document).ready(function() {
+        $('#snapshots').DataTable( {
+            responsive: true,
+            "pageLength": 3,
         } );
     } );
   </script>
